kubernetes/ingress/webapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: main-pod
  labels:
    app: main
spec:
  containers:
  - image: dbgurum/ingress:hi
    name: main-container
    args:
    - "-text=This is the Main-page."
---
apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  selector:
    app: main
  ports:
  - port: 5678
---
apiVersion: v1
kind: Pod
metadata:
  name: bookstore-pod
  labels:
    app: bookstore
spec:
  containers:
  - image: dbgurum/ingress:hi
    name: bookstore-container
    args:
    - "-text=This is the Bookstore-page."
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-svc
spec:
  selector:
    app: bookstore
  ports:
  - port: 5678
---
apiVersion: v1
kind: Pod
metadata:
  name: payment-pod
  labels:
    app: payment
spec:
  containers:
  - image: dbgurum/ingress:hi
    name: payment-container
    args:
    - "-text=This is the Payment-page."
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  selector:
    app: payment
  ports:
  - port: 5678
